# FrameLab

./: .gitignore  FrameLab.spec  README.md  THIRD-PARTY-NOTICES.md  build.ps1  pyproject.toml  requirements-release.txt  requirements.txt
src/framelab/: __main__.py  app.py
tools/: collect_release_licenses.py
